--- a/style.css
+++ b/style.css
@@ -10,3 +10,25 @@ form {
     flex-wrap: wrap;
     gap: 10%;
 }
+
+.btn {
+    all: unset;
+    margin: 1%;
+}
+
+button {
+    padding: 10%;
+    border: 1px solid blue;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: blue;
+    color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+button:active {
+    translate: 0 5%;
+}
