--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@ fieldset {
     flex-direction: column;
     padding: 1%;
     margin: 1%;
+    width: 30%;
 }
 
 form {
     display: flex;
     flex-wrap: wrap;
-    gap: 10%;
+    gap: 20%;
 }
 
 .btn {
